# yamui

./: CMakeLists.txt  Makefile  main.c  yamui-powerkey.c  yamui-powerkey.cpp  yamui-screensaverd.c  yamui-screensaverd.cpp  yamui-tools.cpp  yamui-tools.h  yamui.cpp
debian/: changelog  control  copyright
minui/: CMakeLists.txt  events.c  events.cpp  graphics.c  graphics.cpp  graphics.h  graphics_adf.cpp  graphics_adf.h  graphics_drm.cpp  graphics_drm.h  graphics_fbdev.c  graphics_fbdev.cpp  graphics_fbdev.h  graphics_rotate.c  graphics_rotate.h  minui.h  mkfont.c  resources.c  resources.cpp
minui/include/minui/: minui.h
